add_executable(dequeTest
        src/dequeTest.cpp)
set_target_properties(dequeTest PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(modifyingAlgorithm
        src/modifyingAlgorithm.cpp)
set_target_properties(modifyingAlgorithm PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(mutatingAlgorithm
        src/mutatingAlgorithm.cpp)
set_target_properties(mutatingAlgorithm PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(nonModifyingAlgorithm
        src/nonModifyingAlgorithm.cpp)
set_target_properties(nonModifyingAlgorithm PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(regexTest
        src/regexTest.cpp)
set_target_properties(regexTest PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(removingAlgorithm
        src/removingAlgorithm.cpp)
set_target_properties(removingAlgorithm PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(reverseVowels
        src/reverseVowels.cpp)
set_target_properties(reverseVowels PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(topKFrequent
        src/topKFrequent.cpp)
set_target_properties(topKFrequent PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(unorderedTest
        src/unorderedTest.cpp)
set_target_properties(unorderedTest PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(vector1
        src/vector1.cpp)
set_target_properties(vector1 PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )

add_executable(vectorTest
        src/vectorTest.cpp)
set_target_properties(vectorTest PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS ON
        )